# akidocs

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  LICENSE.txt  README.md  pyproject.toml  test.md
.github/workflows/: test.yml
akidocs-core/: main.py  pyproject.toml  test.md
akidocs-core/src/akidocs_core/: cli.py  inline_tokenizer.py  opener.py  renderer.py  style_base.py  styles.py  tokenizer.py  tokens.py
akidocs-core/tests/: test_cli.py  test_inline_tokenizer.py  test_opener.py  test_renderer.py  test_tokenizer.py
