[project]
name = "akidocs-core"
version = "0.4.0.dev0"
description = "Markdown to PDF converter"
license = "Apache-2.0"
requires-python = ">=3.14"
dependencies = [
    "fpdf2>=2.8.5",
]

[project.scripts]
aki = "akidocs_core.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "RUF"]
ignore = ["E501"]  # line length handled by ruff format
# F   — Pyflakes: unused imports, undefined names, etc.
# E   — pycodestyle errors
# W   — pycodestyle warnings (trailing whitespace, etc.)
# I   — isort: import sorting and grouping
# UP  — pyupgrade: modern Python syntax
# RUF — Ruff-specific rules

[tool.ruff.lint.isort]
known-first-party = ["akidocs_core"]

[tool.ruff.format]
quote-style = "double"
